# FunkyMooseViz

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_de.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Analysis/: FFTProcessor.cpp  FFTProcessor.h  LevelMeterSource.cpp  LevelMeterSource.h  WaveformBuffer.cpp  WaveformBuffer.h
Source/Assets/: FunkyMoose.icns
Source/Components/: ElchComponent.cpp  ElchComponent.h  MeterComponent.cpp  MeterComponent.h  SpectrumComponent.cpp  SpectrumComponent.h  WaveformComponent.cpp  WaveformComponent.h
